--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="new-puppy-form"></div>
+    <div id="puppy-container"></div>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
